# cc-bridge

./: .gitignore  CLAUDE.md  README.md  artifact_store.py  bootstrap.py  ccb_bridge.py  config_manager.py  context_orchestrator.py  feishu_gateway.py  feishu_gateway_store.py  feishu_onboard.py  memory_consolidator.py  memory_index.py  memory_llm.py  memory_vector_store.py  package-lock.json  package.json  qrcode_gen.py  remote_bridge.py  remote_manager.py  requirements.txt  scheduled_task_runner.py  scheduled_task_store.py  server.py  session_store.py  start.bat  start.ps1  start.sh  wiki_store.py  workflow_runner.py  workflow_store.py
backend/: __init__.py  responses.py
bootstrap/: __init__.py  claude_setup.py  installer.py  launcher.py  node_setup.py  probe.py  python_setup.py  runtime.py  runtime_unpack.py  state.py  venv_setup.py
custom_tools/: __init__.py  registry.py
desktop/: README.md  electron-builder.config.cjs  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: agent-workflow-orchestration-design.md  agent-workflow-ui-prototype.html  auto-memory-consolidation-design.md  cc-bridge-api-reference.md  computer-use-desktop-automation.md  desktop-ui-preview.html  feishu-onboard-design.md  frontend-beautification-plan.md  hermes-layout-analysis.md  html-js-optimization-plan.md  image-generation-design.md  llm-wiki-design.md  memory-backend-optimization.md  memory-frontend-optimization.md  memory-organize-llm-design.md  (+12 more)
gui/: server.py
(+114 files in other folders)
