[package]
name = "cc-gui"
version = "0.1.0"
description = "Desktop GUI for Claude Code CLI"
authors = ["CC-GUI contributors"]
edition = "2021"

[lib]
name = "cc_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
